# ScanConvert

./: README.md
data/: C5-01_config.xml  L15-01_config.xml
src/: CMakeLists.txt  ScanConvertTest.cpp
